--- a/info.yaml
+++ b/info.yaml
@@ -1,18 +1,22 @@
---- 
-project: 
-  description: "A template SoC for Google sponsored Open MPW shuttles for SKY130."
+---
+project:
+  description: "QLSOFA-HD (Skywater Opensource FPGAs)"
   foundry: "SkyWater"
-  git_url: "https://github.com/efabless/caravel.git"
-  organization: "Efabless"
-  organization_url: "http://efabless.com"
-  owner: "Tim Edwards"
+  git_url: "https://github.com/lnis-uofu/Caravel-QLSOFA-HD.git"
+  organization: "lnis"
+  organization_url: "https://sites.google.com/site/pegaillardon/home"
+  owner: "LNIS"
   process: "SKY130"
   project_name: "Caravel"
-  tags: 
+  tags:
     - "Open MPW"
     - "Test Harness"
+    - "VPR"
+    - "SOFA"
+    - "Homogeneous FPGA Design"
+    - "OpenSource FPGA IP"
   category: "Test Harness"
   top_level_netlist: "verilog/gl/caravel.v"
-  user_level_netlist: "verilog/gl/user_project_wrapper.v"
+  user_level_netlist: "verilog/gl/caravel_qlsofa_hd_top.v"
   version: "1.00"
   cover_image: "doc/ciic_harness.png"
